Overhaul Airfield management to Tech Support

--- a/Manual/pdfs/NeedyModules/Manual Air Traffic Control/TerminalHelpDesk.html
+++ b/Manual/pdfs/NeedyModules/Manual Air Traffic Control/TerminalHelpDesk.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <title>Aviation Management - Keep Talking and Nobody Explodes Module</title>
+        <title>Tech Support - Keep Talking and Nobody Explodes Module</title>
         <meta name="viewport" content="initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -55,38 +55,38 @@
                 <div class="page page-bg-01">
                     <div class="page-header">
                         <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                        <span class="page-header-section-title">Aviation Management</span>
+                        <span class="page-header-section-title">Tech Support</span>
                     </div>
                     <div class="page-content">
                         <img src="img/Component/Modele Air Traffic Control.png" class="diagram">
-                        <h2>On the Subject of Aviation Management</h2>
-                        <p class="flavour-text">If you manage to disarm a bomb, you can surely manage an airfield, right?</p>
+                        <h2>On the Subject of Tech Support</h2>
+                        <p class="flavour-text">Have you tried turning it off and on again?</p>
 
                         <ul>
-                            <li>Two minutes after starting to dismantle the bomb (or 45 seconds if the bomb's total time is less than 10 minutes), the bomb's airfield will open.</li>
-                            <li>Incidentally, as indicated by the module's timer, a plane will arrive at one of four landing lanes.</li>
-                            <li>Each plane is identified by a serial, city of origin, passenger count, and the amount of luggage it carries.</li>
-                            <li>Based on this information, a correct hangar, passenger shuttle, and luggage cart have to be selected, using the three buttons at the right side.</li>
-                            <li>When an incorrect hangar, shuttle or cart is chosen, the plane will be delayed.</li>
-                            <li>When a new plane arrives at a lane where another is still waiting, it will crash into the occupying one, crashing it and dealing a strike.</li>
+                            <li>Incidentally, one of the modules on the bomb will break down giving an error report on the terminal screen.</li>
+                            <li>The affected module can be found by looking for the module with a yellow indicator light. While this light is on, the module will be inoperable.</li>
+                            <li>Each issue is indicated with an error code, the line and column of the error, and the source file in which the issue occurred.</li>
+                            <li>Based on this information, a correct patcher, patcher version, and launch parameters can be selected, using the three buttons at the right side.</li>
+                            <li>When incorrect information is entered, a strike will be dealt, and a new selection has to be made.</li>
+                            <li>If you do not resolve the issue in time, a strike is dealt as well.</li>
                         </ul>
                         
-                        <h3>Selecting the Correct Hangar</h3>
-                        <p>Use the plane's serial number and city of origin to find the number of its designated hangar, using the table below.</p>
+                        <h3>Selecting the Patch File Version</h3>
+                        <p>Use the error code and source file to find the number of the correct version of the patch file, using the table below.</p>
                         <table class="Serial-Origin-Crosstable">
-                            <tr class="Serial-Origin-Labels"><th></th><th><div>Ashgabat</div></th><th><div>Cairo</div></th><th><div>Harare</div></th><th><div>Praia</div></th><th><div>Sofia</div></th><th><div>Wellington</div></th><th><div>Victoria</div></th><th><div>Lima</div></th><th><div>Pretoria</div></th><th><div>Riyadh</div></th><th><div>Dushanbe</div></th><th><div>Bishkek</div></th><th><div>Belmopan</div></th><th><div>Pyongyang</div></th><th><div>Palikir</div></th><th><div>Paramaribo</div></th></tr>
-                            <tr><th>7K4-G5</th><th>1</th><th>3</th><th>5</th><th>5</th><th>4</th><th>4</th><th>1</th><th>3</th><th>3</th><th>2</th><th>1</th><th>5</th><th>4</th><th>4</th><th>3</th><th>6</th></tr>
-                            <tr><th>6F-2V5</th><th>5</th><th>2</th><th>1</th><th>6</th><th>2</th><th>2</th><th>2</th><th>6</th><th>5</th><th>2</th><th>2</th><th>2</th><th>6</th><th>6</th><th>1</th><th>6</th></tr>
-                            <tr><th>6S-0H2</th><th>5</th><th>1</th><th>6</th><th>6</th><th>1</th><th>1</th><th>5</th><th>3</th><th>2</th><th>5</th><th>1</th><th>1</th><th>3</th><th>1</th><th>6</th><th>3</th></tr>
-                            <tr><th>4C2-G5</th><th>3</th><th>5</th><th>3</th><th>4</th><th>5</th><th>5</th><th>1</th><th>1</th><th>4</th><th>5</th><th>5</th><th>4</th><th>3</th><th>6</th><th>4</th><th>6</th></tr>
-                            <tr><th>4S-0X5</th><th>1</th><th>2</th><th>4</th><th>4</th><th>1</th><th>2</th><th>6</th><th>2</th><th>6</th><th>3</th><th>4</th><th>4</th><th>4</th><th>4</th><th>6</th><th>4</th></tr>
-                            <tr><th>2R-0K0</th><th>5</th><th>4</th><th>3</th><th>2</th><th>3</th><th>1</th><th>2</th><th>5</th><th>1</th><th>4</th><th>3</th><th>4</th><th>6</th><th>3</th><th>3</th><th>6</th></tr>
-                            <tr><th>5B7-Y6</th><th>5</th><th>5</th><th>4</th><th>5</th><th>4</th><th>3</th><th>4</th><th>5</th><th>6</th><th>6</th><th>2</th><th>3</th><th>2</th><th>6</th><th>6</th><th>6</th></tr>
-                            <tr><th>5A4-L1</th><th>4</th><th>1</th><th>2</th><th>6</th><th>1</th><th>1</th><th>4</th><th>2</th><th>4</th><th>5</th><th>6</th><th>3</th><th>5</th><th>4</th><th>5</th><th>2</th></tr>
-                            <tr><th>2D-8R6</th><th>3</th><th>4</th><th>3</th><th>1</th><th>2</th><th>6</th><th>5</th><th>5</th><th>6</th><th>2</th><th>1</th><th>4</th><th>1</th><th>2</th><th>2</th><th>6</th></tr>
-                            <tr><th>5E-8B1</th><th>1</th><th>4</th><th>4</th><th>4</th><th>5</th><th>6</th><th>1</th><th>4</th><th>3</th><th>6</th><th>3</th><th>4</th><th>2</th><th>4</th><th>1</th><th>1</th></tr>
-                            <tr><th>0Q-1G0</th><th>1</th><th>6</th><th>3</th><th>5</th><th>5</th><th>5</th><th>5</th><th>5</th><th>1</th><th>4</th><th>2</th><th>3</th><th>3</th><th>4</th><th>1</th><th>1</th></tr>
-                            <tr><th>8Q5-P1</th><th>3</th><th>6</th><th>6</th><th>2</th><th>2</th><th>1</th><th>2</th><th>2</th><th>4</th><th>3</th><th>4</th><th>3</th><th>2</th><th>1</th><th>1</th><th>1</th></tr>
+                            <tr class="Serial-Origin-Labels"><th></th><th><div>aeadic.xai</div></th><th><div>cknt.d n</div></th><th><div>casour.b3</div></th><th><div>rote.rbc</div></th><th><div>hibacs.sd</div></th><th><div>leia.ars</div></th><th><div>ppos.ml</div></th><th><div>captal.r k</div></th><th><div>rtng.sv</div></th><th><div>nasron.ex</div></th><th><div>rdiets.ar</div></th><th><div>tbrali.gs</div></th><th><div>oras.scn</div></th><th><div>adiycl.c c</div></th><th><div>orcngb.sj</div></th><th><div>ickefc.lsp</div></th></tr>
+                            <tr><th>0x325FBA</th><th>4</th><th>7</th><th>5</th><th>6</th><th>7</th><th>7</th><th>1</th><th>2</th><th>6</th><th>7</th><th>8</th><th>6</th><th>5</th><th>9</th><th>6</th><th>9</th></tr>
+                            <tr><th>0xA25E03</th><th>1</th><th>3</th><th>6</th><th>5</th><th>2</th><th>3</th><th>9</th><th>3</th><th>9</th><th>4</th><th>5</th><th>6</th><th>5</th><th>5</th><th>8</th><th>6</th></tr>
+                            <tr><th>0x0A5241</th><th>7</th><th>5</th><th>4</th><th>3</th><th>4</th><th>2</th><th>3</th><th>7</th><th>1</th><th>6</th><th>4</th><th>6</th><th>9</th><th>5</th><th>5</th><th>8</th></tr>
+                            <tr><th>0xFADA92</th><th>7</th><th>8</th><th>6</th><th>8</th><th>5</th><th>4</th><th>6</th><th>7</th><th>9</th><th>9</th><th>3</th><th>5</th><th>3</th><th>8</th><th>8</th><th>8</th></tr>
+                            <tr><th>0x05CB99</th><th>6</th><th>2</th><th>2</th><th>8</th><th>1</th><th>1</th><th>5</th><th>2</th><th>6</th><th>7</th><th>9</th><th>4</th><th>7</th><th>5</th><th>7</th><th>3</th></tr>
+                            <tr><th>0x05630B</th><th>4</th><th>6</th><th>4</th><th>1</th><th>2</th><th>9</th><th>7</th><th>8</th><th>8</th><th>3</th><th>1</th><th>5</th><th>1</th><th>2</th><th>2</th><th>8</th></tr>
+                            <tr><th>0x996EB4</th><th>1</th><th>6</th><th>6</th><th>6</th><th>7</th><th>9</th><th>2</th><th>5</th><th>4</th><th>9</th><th>4</th><th>5</th><th>3</th><th>6</th><th>1</th><th>2</th></tr>
+                            <tr><th>0x0F343D</th><th>1</th><th>9</th><th>4</th><th>8</th><th>7</th><th>7</th><th>7</th><th>7</th><th>1</th><th>6</th><th>3</th><th>5</th><th>4</th><th>6</th><th>1</th><th>1</th></tr>
+                            <tr><th>0xC533EE</th><th>4</th><th>9</th><th>9</th><th>3</th><th>3</th><th>2</th><th>2</th><th>3</th><th>5</th><th>4</th><th>6</th><th>4</th><th>3</th><th>1</th><th>2</th><th>1</th></tr>
+                            <tr><th>0x2DB1FF</th><th>2</th><th>5</th><th>3</th><th>6</th><th>7</th><th>5</th><th>8</th><th>1</th><th>3</th><th>6</th><th>6</th><th>5</th><th>6</th><th>9</th><th>3</th><th>2</th></tr>
+                            <tr><th>0x10C62B</th><th>5</th><th>1</th><th>9</th><th>8</th><th>4</th><th>9</th><th>1</th><th>9</th><th>8</th><th>9</th><th>5</th><th>2</th><th>9</th><th>2</th><th>9</th><th>1</th></tr>
+                            <tr><th>0x2161E6</th><th>3</th><th>6</th><th>8</th><th>9</th><th>1</th><th>1</th><th>7</th><th>3</th><th>5</th><th>9</th><th>3</th><th>5</th><th>8</th><th>3</th><th>3</th><th>5</th></tr>
                         </table>
                     </div>
                     <div class="page-footer relative-footer">Page 1 of 2</div>
@@ -95,11 +95,11 @@
                 <div class="page page-bg-02">
                     <div class="page-header">
                         <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                        <span class="page-header-section-title">Aviation Manager</span>
+                        <span class="page-header-section-title">Tech Support</span>
                     </div>
                     <div class="page-content">
-                        <h3>Selecting the Correct Passenger Shuttle</h3>
-                        <p>Follow instructions listed below to determine the plane's designated passenger shuttle.</p>
+                        <h3>Selecting the Correct Patch File</h3>
+                        <p>Follow instructions listed below to determine the correct patch file.</p>
                         <ul>
                             <li>If one of the plane's serial letters is contained in its origin's, select shuttle GN-726.</li>
                             <li>Otherwise, if the plane's passenger and luggage count are both even, select shuttle GC-120.</li>
@@ -112,7 +112,7 @@
                         </ul>
 
 
-                        <h3>Selecting the Correct Luggage Cart</h3>
+                        <h3>Selecting the Correct Launch Parameters</h3>
                         <p>
                             From the plane's serial number, select the pre-dash characters and translate these to numerical values (A = 1, B = 2, Z = 26), and sum these. 
                             Multiply this number by the plane's number of passengers. 
