--- a/Manual/pdfs/NeedyModules/Manual Air Traffic Control/TerminalHelpDesk.html
+++ b/Manual/pdfs/NeedyModules/Manual Air Traffic Control/TerminalHelpDesk.html
@@ -74,19 +74,19 @@
                         <h3>Selecting the Patch File Version</h3>
                         <p>Use the error code and source file to find the number of the correct version of the patch file, using the table below.</p>
                         <table class="Serial-Origin-Crosstable">
-                            <tr class="Serial-Origin-Labels"><th></th><th><div>aeadic.xai</div></th><th><div>cknt.d n</div></th><th><div>casour.b3</div></th><th><div>rote.rbc</div></th><th><div>hibacs.sd</div></th><th><div>leia.ars</div></th><th><div>ppos.ml</div></th><th><div>captal.r k</div></th><th><div>rtng.sv</div></th><th><div>nasron.ex</div></th><th><div>rdiets.ar</div></th><th><div>tbrali.gs</div></th><th><div>oras.scn</div></th><th><div>adiycl.c c</div></th><th><div>orcngb.sj</div></th><th><div>ickefc.lsp</div></th></tr>
-                            <tr><th>0x325FBA</th><th>4</th><th>7</th><th>5</th><th>6</th><th>7</th><th>7</th><th>1</th><th>2</th><th>6</th><th>7</th><th>8</th><th>6</th><th>5</th><th>9</th><th>6</th><th>9</th></tr>
-                            <tr><th>0xA25E03</th><th>1</th><th>3</th><th>6</th><th>5</th><th>2</th><th>3</th><th>9</th><th>3</th><th>9</th><th>4</th><th>5</th><th>6</th><th>5</th><th>5</th><th>8</th><th>6</th></tr>
-                            <tr><th>0x0A5241</th><th>7</th><th>5</th><th>4</th><th>3</th><th>4</th><th>2</th><th>3</th><th>7</th><th>1</th><th>6</th><th>4</th><th>6</th><th>9</th><th>5</th><th>5</th><th>8</th></tr>
-                            <tr><th>0xFADA92</th><th>7</th><th>8</th><th>6</th><th>8</th><th>5</th><th>4</th><th>6</th><th>7</th><th>9</th><th>9</th><th>3</th><th>5</th><th>3</th><th>8</th><th>8</th><th>8</th></tr>
-                            <tr><th>0x05CB99</th><th>6</th><th>2</th><th>2</th><th>8</th><th>1</th><th>1</th><th>5</th><th>2</th><th>6</th><th>7</th><th>9</th><th>4</th><th>7</th><th>5</th><th>7</th><th>3</th></tr>
-                            <tr><th>0x05630B</th><th>4</th><th>6</th><th>4</th><th>1</th><th>2</th><th>9</th><th>7</th><th>8</th><th>8</th><th>3</th><th>1</th><th>5</th><th>1</th><th>2</th><th>2</th><th>8</th></tr>
-                            <tr><th>0x996EB4</th><th>1</th><th>6</th><th>6</th><th>6</th><th>7</th><th>9</th><th>2</th><th>5</th><th>4</th><th>9</th><th>4</th><th>5</th><th>3</th><th>6</th><th>1</th><th>2</th></tr>
-                            <tr><th>0x0F343D</th><th>1</th><th>9</th><th>4</th><th>8</th><th>7</th><th>7</th><th>7</th><th>7</th><th>1</th><th>6</th><th>3</th><th>5</th><th>4</th><th>6</th><th>1</th><th>1</th></tr>
-                            <tr><th>0xC533EE</th><th>4</th><th>9</th><th>9</th><th>3</th><th>3</th><th>2</th><th>2</th><th>3</th><th>5</th><th>4</th><th>6</th><th>4</th><th>3</th><th>1</th><th>2</th><th>1</th></tr>
-                            <tr><th>0x2DB1FF</th><th>2</th><th>5</th><th>3</th><th>6</th><th>7</th><th>5</th><th>8</th><th>1</th><th>3</th><th>6</th><th>6</th><th>5</th><th>6</th><th>9</th><th>3</th><th>2</th></tr>
-                            <tr><th>0x10C62B</th><th>5</th><th>1</th><th>9</th><th>8</th><th>4</th><th>9</th><th>1</th><th>9</th><th>8</th><th>9</th><th>5</th><th>2</th><th>9</th><th>2</th><th>9</th><th>1</th></tr>
-                            <tr><th>0x2161E6</th><th>3</th><th>6</th><th>8</th><th>9</th><th>1</th><th>1</th><th>7</th><th>3</th><th>5</th><th>9</th><th>3</th><th>5</th><th>8</th><th>3</th><th>3</th><th>5</th></tr>
+                            <tr class="Serial-Origin-Labels"><th></th><th><div>disags.pwn</div></th><th><div>paum.gmo</div></th><th><div>satcle.bb</div></th><th><div>phip.ccc</div></th><th><div>hitble.nsl</div></th><th><div>plor.pom</div></th><th><div>dily.dpkw</div></th><th><div>repsly.py</div></th><th><div>debs.cd</div></th><th><div>equely.ctl</div></th><th><div>reving.rs</div></th><th><div>pality.gorm</div></th><th><div>adic.mf</div></th><th><div>batess.ci</div></th><th><div>sanial.asar</div></th><th><div>juxsed.so</div></th></tr>
+                            <tr><th>0x325FBA</th><th>8</th><th>7</th><th>8</th><th>6</th><th>8</th><th>5</th><th>4</th><th>6</th><th>7</th><th>9</th><th>9</th><th>3</th><th>5</th><th>3</th><th>8</th><th>8</th></tr>
+                            <tr><th>0xA25E03</th><th>8</th><th>6</th><th>2</th><th>2</th><th>8</th><th>1</th><th>1</th><th>5</th><th>2</th><th>6</th><th>7</th><th>9</th><th>4</th><th>7</th><th>5</th><th>7</th></tr>
+                            <tr><th>0x0A5241</th><th>3</th><th>4</th><th>6</th><th>4</th><th>1</th><th>2</th><th>9</th><th>7</th><th>8</th><th>8</th><th>3</th><th>1</th><th>5</th><th>1</th><th>2</th><th>2</th></tr>
+                            <tr><th>0xFADA92</th><th>8</th><th>1</th><th>6</th><th>6</th><th>6</th><th>7</th><th>9</th><th>2</th><th>5</th><th>4</th><th>9</th><th>4</th><th>5</th><th>3</th><th>6</th><th>1</th></tr>
+                            <tr><th>0x05CB99</th><th>2</th><th>1</th><th>9</th><th>4</th><th>8</th><th>7</th><th>7</th><th>7</th><th>7</th><th>1</th><th>6</th><th>3</th><th>5</th><th>4</th><th>6</th><th>1</th></tr>
+                            <tr><th>0x05630B</th><th>1</th><th>4</th><th>9</th><th>9</th><th>3</th><th>3</th><th>2</th><th>2</th><th>3</th><th>5</th><th>4</th><th>6</th><th>4</th><th>3</th><th>1</th><th>2</th></tr>
+                            <tr><th>0x996EB4</th><th>1</th><th>2</th><th>5</th><th>3</th><th>6</th><th>7</th><th>5</th><th>8</th><th>1</th><th>3</th><th>6</th><th>6</th><th>5</th><th>6</th><th>9</th><th>3</th></tr>
+                            <tr><th>0x0F343D</th><th>2</th><th>5</th><th>1</th><th>9</th><th>8</th><th>4</th><th>9</th><th>1</th><th>9</th><th>8</th><th>9</th><th>5</th><th>2</th><th>9</th><th>2</th><th>9</th></tr>
+                            <tr><th>0xC533EE</th><th>1</th><th>3</th><th>6</th><th>8</th><th>9</th><th>1</th><th>1</th><th>7</th><th>3</th><th>5</th><th>9</th><th>3</th><th>5</th><th>8</th><th>3</th><th>3</th></tr>
+                            <tr><th>0x2DB1FF</th><th>5</th><th>6</th><th>6</th><th>9</th><th>1</th><th>1</th><th>9</th><th>2</th><th>1</th><th>2</th><th>7</th><th>7</th><th>8</th><th>5</th><th>7</th><th>4</th></tr>
+                            <tr><th>0x10C62B</th><th>9</th><th>2</th><th>7</th><th>2</th><th>2</th><th>2</th><th>1</th><th>8</th><th>9</th><th>5</th><th>3</th><th>9</th><th>3</th><th>9</th><th>1</th><th>8</th></tr>
+                            <tr><th>0x2161E6</th><th>7</th><th>8</th><th>8</th><th>4</th><th>1</th><th>7</th><th>2</th><th>7</th><th>4</th><th>4</th><th>1</th><th>7</th><th>9</th><th>9</th><th>6</th><th>4</th></tr>
                         </table>
                     </div>
                     <div class="page-footer relative-footer">Page 1 of 2</div>
@@ -101,48 +101,47 @@
                         <h3>Selecting the Correct Patch File</h3>
                         <p>Follow instructions listed below to determine the correct patch file.</p>
                         <ul>
-                            <li>If one of the plane's serial letters is contained in its origin's, select shuttle GN-726.</li>
-                            <li>Otherwise, if the plane's passenger and luggage count are both even, select shuttle GC-120.</li>
-                            <li>Otherwise, if the origin's name consists of multiple words, or the plane has more luggage than passengers, select shuttle LF-705.</li>
-                            <li>Otherwise, if the plane's serial number's first letter is in the last fourth of the alphabet, select shuttle DG-780.</li>
-                            <li>Otherwise, if the plane came in on lane 3 and it has more than 20 luggage, select GC-120.</li>
-                            <li>Otherwise, if all landing lanes are occupied, and their cumulative passenger count is over 80, excluding wrecked lanes, select DO5-62.</li>
-                            <li>Otherwise, select shuttle HK4-82.</li>
-                            <li>However, if the plane's origin is either Victoria, Pretoria, or Pyongyang, ignore all rules above and select MQ3-17.</li>
+                            <li>If any of the error code's letters are contained in the crashed source file's name, select wane.drf.</li>
+                            <li>Otherwise, if the error's line and column are both even, select razcle.pxi.</li>
+                            <li>Otherwise, if the source file's name contains more vowels than consonants, or the column number is higher than the line, select faee.sup.</li>
+                            <li>Otherwise, if the source file's first letter is in the last fourth of the alphabet, select prle.cba.</li>
+                            <li>Otherwise, if the less than 100 seconds is still available and the column is higher than 75, select razcle.pxi.</li>
+                            <li>Otherwise, if this is the fourth or later crash and the cumulative line number of all previous errors is over 450, select gilick.pxd.</li>
+                            <li>Otherwise, select shuttle lonist.ftl.</li>
+                            <li>However, if the error's source file is either satcle.bb, plor.pom, or equely.ctl, ignore all rules above and select exed.asc.</li>
                         </ul>
-
 
                         <h3>Selecting the Correct Launch Parameters</h3>
                         <p>
-                            From the plane's serial number, select the pre-dash characters and translate these to numerical values (A = 1, B = 2, Z = 26), and sum these. 
-                            Multiply this number by the plane's number of passengers. 
-                            Execute the same method for the serial's post-dash characters, however, instead multiply these with the plane's amount of luggage.
-                            Finally, perform an XOR-operation with the difference between these two numbers (ignoring its sign) and the value of the pre- and postdash values multiplied with each other.   
-                            By subtracting the number of different luggage carts from this number, until it is smaller than that number, the final result is unveiled. 
-                            Add one to this number and you will have found the index of the plane's correct luggage cart. 
-                            Use the table below to determine that cart's serial.
+                            From the plane's error code, select the first three characters, starting after the "0x", translate these into numerical values (A = 1, B = 2, Z = 26), and sum these. 
+                            Multiply this number by the error's line number. 
+                            Execute the same method for the error code's last three characters, however, instead multiply these with the error code's column.
+                            Finally, perform an XOR-operation with the delta between these two numbers, and the value of the sum of the first three and the sum of the last three values multiplied with each other.
+                            By subtracting the number of different launch parameters from this number, until it is smaller than that number, the final result is unveiled. 
+                            Add one to this number and you will have found the index of the plane's correct launch paramters. 
+                            Use the table below to determine those launch paramters.
                         </p>
                         <p class="appendix-reference">
                             See Appendix: Boolean Operations for XOR-operations reference.
                         </p>
                         <table class="Luggage-Table-Container">
                             <th><table class="Luggage-Table">
-                                <tr><th>Cart Index</th><th>Cart Serial</th></tr>
-                                <tr><th>1</th><th>SQ2-16</th></tr>
-                                <tr><th>2</th><th>CQ3-01</th></tr>
-                                <tr><th>3</th><th>VG5-44</th></tr>
+                                <tr><th>Param Index</th><th>Parameters</th></tr>
+                                <tr><th>1</th><th>-d -h</th></tr>
+                                <tr><th>2</th><th>-b -q -k</th></tr>
+                                <tr><th>3</th><th>-x -m</th></tr>
                             </table></th>
                             <th><table class="Luggage-Table">
-                                <tr><th>Cart Index</th><th>Cart Serial</th></tr>
-                                <tr><th>4</th><th>LF2-01</th></tr>
-                                <tr><th>5</th><th>CS-612</th></tr>
-                                <tr><th>6</th><th>FK2-81</th></tr>
+                                <tr><th>Param Index</th><th>Parameters</th></tr>
+                                <tr><th>4</th><th>-w -t</th></tr>
+                                <tr><th>5</th><th>-o -v -o</th></tr>
+                                <tr><th>6</th><th>-p -t</th></tr>
                             </table></th>
                             <th><table class="Luggage-Table">
-                                <tr><th>Cart Index</th><th>Cart Serial</th></tr>
-                                <tr><th>7</th><th>BF-453</th></tr>
-                                <tr><th>8</th><th>RP3-48</th></tr>
-                                <tr><th>9</th><th>HO0-46</th></tr>
+                                <tr><th>Param Index</th><th>Parameters</th></tr>
+                                <tr><th>7</th><th>-y -f -m</th></tr>
+                                <tr><th>8</th><th>-w</th></tr>
+                                <tr><th>9</th><th>-w -q -e</th></tr>
                             </table></th>
                         </table>
                     </div>
