--- a/Manual/Manual Tech Support.html
+++ b/Manual/Manual Tech Support.html
@@ -102,14 +102,14 @@
                         <h3>Selecting the Correct Patch File</h3>
                         <p>Follow instructions listed below to determine the correct patch file.</p>
                         <ul>
-                            <li>If any of the error code's letters are contained in the crashed source file's name, select wane.drf.</li>
-                            <li>Otherwise, if the error's line and column are both even, select razcle.pxi.</li>
-                            <li>Otherwise, if the source file's number of vowels is equal to or greater than the number of consonants, or the column index is higher than the line index, select faee.sup.</li>
-                            <li>Otherwise, if the source file's first letter is in the last fourth of the alphabet, select prle.cba.</li>
+                            <li>If the source file's number of vowels is equal to or greater than the number of consonants, or the column index is higher than the line index, select faee.sup.</li>
+                            <li>Otherwise, if the source file's first letter is in the last third of the alphabet, select prle.cba.</li>
                             <li>Otherwise, if the less than 99 seconds is still available and the column is higher than 75, select linion.dart.</li>
+                            <li>Otherwise, if the error's line and column are both even, select razcle.pxi.</li>
+                            <li>Otherwise, if any of the error code's letters are contained in the crashed source file's name, select wane.drf.</li>
                             <li>Otherwise, if this is the fourth or later crash and the cumulative line number of all previous errors is over 450, select gilick.pxd.</li>
                             <li>Otherwise, select shuttle lonist.ftl.</li>
-                            <li>However, if the error's source file is either satcle.bb, plor.pom, or equely.ctl, ignore all rules above and select exed.asc.</li>
+                            <li>However, if the error's source file is either satcle.bb, or equely.ctl, ignore all rules above and select exed.asc.</li>
                         </ul>
 
                         <h3>Selecting the Correct Launch Parameters</h3>
