manual repo updates
updated .png to .svg
Description is more concise. 
Description has tags.

--- a/Manual/Tech Support.html
+++ b/Manual/Tech Support.html
@@ -51,7 +51,7 @@
                         <span class="page-header-section-title">Tech Support</span>
                     </div>
                     <div class="page-content">
-                        <img src="img/Component/Model Tech Support.png" class="diagram">
+                        <img src="img/Component/Tech Support.svg" class="diagram">
                         <h2>On the Subject of Tech Support</h2>
                         <p class="flavour-text">Have you tried turning it off and on again?</p>
                         <ul>
