--- a/Manual/Three Levers.html
+++ b/Manual/Three Levers.html
@@ -34,9 +34,9 @@
                     <ul>
                         <li>If the number of solved modules is a multiplication of 7, flip switch one.</li>
                         <li>If the first letter of the last resolved module is a vowel, flip switch three.</li>
-                        <li>If all switches are on the same side, flip switch two.</li>
-                        <li>If the solved module was on the timer's side, flip switch three.</li>
-                        <li>If you flipped the third switch last time, flip switch two.</li>
+                        <li>If the switches are all ON or OFF, flip switch two.</li>
+                        <li>If the solved module was on the same side as this module, flip switch three.</li>
+                        <li>If the third switch is ON, flip switch three.</li>
                         <li>If you made no mistakes, flip switch one.</li>
                     </ul>
 
@@ -44,19 +44,19 @@
                     <h3>Switch Instruction Set II</h3>
                     <ul>
                         <li>If you have made a mistake, flip switch two.</li>
-                        <li>If all the switches are not on one side, flip switch three.</li>
+                        <li>If not all the switches are ON or OFF, flip switch three.</li>
                         <li>If the last letter of the last resolved module is a vowel, flip switch one.</li>
-                        <li>If the solved module was not on the timer's side, flip switch one.</li>
+                        <li>If the solved module is not on the same side as this module, flip switch one.</li>
                         <li>If the number of solved modules is a multiplication of 9, flip switch three.</li>
-                        <li>If you flipped the first switch last time, flip switch two.</li>
+                        <li>If the first switch is ON, flip switch two.</li>
                     </ul>
 
                     <h3>Switch Instruction Set III</h3>
                     <ul>
-                        <li>If only the middle switch is up, flip switch one.</li>
-                        <li>If you flipped the second switch last time, flip switch two.</li>
-                        <li>If the solved module was not on the timer's side, flip switch three.</li>
-                        <li>If you have made a two or more mistakes, flip switch two.</li>
+                        <li>If only the middle switch is ON, flip switch one.</li>
+                        <li>If you the second switch is ON, flip switch two.</li>
+                        <li>If the solved module is not on the same side as this module, flip switch two.</li>
+                        <li>If you have made a two or more mistakes, flip switch three.</li>
                         <li>If the last letter of the last resolved module is a number, flip switch three.</li>
                         <li>If the number of solved modules is a multiplication of 6, flip switch one.</li>
                     </ul>
